QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog

SVN TRUNK

- Main context menu simple no-brainer reordering.


0.1.1  2010-09-24  JACK-MIDI bugfix release.

- Fixed serious JACK-MIDI DoS bug, now working as advertised.

- Minor debug mode JACK-MIDI event print out fix.


0.1.0  2010-09-03  Second public release.

- Attain micro-second precision for JACK MIDI timing, through
  home-brew queue sorting pool =)

- Enabling ALSA MIDI and/or JACK MIDI devices is now optional.

- Transparent JACK MIDI support is being introduced. (EXPERIMENTAL)

- Use standard dialog buttons as provided by QDialogButtonBox.

- Context menu is now also triggered when left-clicking on the
  system tray icon.

- Message box title confidence fix (whatever it be:)


0.0.1  2010-03-07  First public release.