@@ -5,6 +5,9 @@ ChangeLog
 
 SVN TRUNK
 
+- Fixed Makefile.in handling of installation directories to
+  the configure script eg. --bindir, --datadir.
+
 - Main context menu simple no-brainer reordering.
 
 
